WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152876
Correct missing EXT_sRGB Format Handling
https://bugs.webkit.org/show_bug.cgi?id=152876
Summary
Correct missing EXT_sRGB Format Handling
Brent Fulgham
Reported
2016-01-07 17:52:11 PST
When we added EXT_sRGB support to WebGL in
Bug 109332
, a couple of places were missed for the case of using SRGB as a texture source. This was identified by the WebGL 1.0.4 test suite.
Attachments
Patch
(3.87 KB, patch)
2016-01-07 18:02 PST
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2016-01-07 17:53:12 PST
<
rdar://problem/23284389
>
Brent Fulgham
Comment 2
2016-01-07 18:02:12 PST
Created
attachment 268518
[details]
Patch
WebKit Commit Bot
Comment 3
2016-01-07 18:04:13 PST
Attachment 268518
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:507: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Kilzer (:ddkilzer)
Comment 4
2016-01-07 18:18:21 PST
(In reply to
comment #3
)
>
Attachment 268518
[details]
did not pass style-queue: > > > ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:507: enum > members should use InterCaps with an initial capital letter or initial 'k' > for C-style enums. [readability/enum_casing] [4] > Total errors found: 1 in 4 files > > > If any of these errors are false positives, please file a bug against > check-webkit-style.
Didn't I fix this? Maybe my check-style change wasn't broad enough.
David Kilzer (:ddkilzer)
Comment 5
2016-01-07 18:21:03 PST
(In reply to
comment #4
)
> (In reply to
comment #3
) > >
Attachment 268518
[details]
did not pass style-queue: > > > > > > ERROR: Source/WebCore/platform/graphics/GraphicsContext3D.h:507: enum > > members should use InterCaps with an initial capital letter or initial 'k' > > for C-style enums. [readability/enum_casing] [4] > > Total errors found: 1 in 4 files > > > > > > If any of these errors are false positives, please file a bug against > > check-webkit-style. > > Didn't I fix this? Maybe my check-style change wasn't broad enough.
Oh, not a 'k' constant. Different issue.
WebKit Commit Bot
Comment 6
2016-01-07 18:52:00 PST
Comment on
attachment 268518
[details]
Patch Clearing flags on attachment: 268518 Committed
r194751
: <
http://trac.webkit.org/changeset/194751
>
WebKit Commit Bot
Comment 7
2016-01-07 18:52:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug